Update readme, license, etc.

--- a/package.xml
+++ b/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ip_tunnel</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="nilsjor@kth.se">nilsj</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.1.0</version>
+  <description>Package to tunnel IP traffic over DDS using ROS 2</description>
+  <maintainer email="nilsjor@kth.se">Nils Jörgensen</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
